fixed databbug ase not beaing created

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=UsersDb.db"
+    "DefaultConnection": "Data source=UsersDb.db"
   },
   "Logging": {
     "LogLevel": {
